Separated .wrap and .titan-framework-panel-wrap divs to prevent admin notices displaying inside Titan panel. Moved the options page H2 element to display inside .wrap, but outside .titan-framework-panel-wrap for the same reason. Removed logic to display tab title inside H2 in favor of simply displaying the main options panel title, which matches default plugin and theme behavior. Modified admin CSS to remove unessary .wrap classes and background/border from the main .titan-framework-panel-wrap div.

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -59,12 +59,10 @@
  */
 
 /* main wrapper */
-.titan-framework-panel-wrap.wrap {
-	background: #FFF;
-	border: 1px solid #eaeaea;
+.titan-framework-panel-wrap {
 }
 /* title */
-.titan-framework-panel-wrap.wrap h2 {
+.titan-framework-panel-wrap h2 {
 	padding: 20px 15px;
 	border-bottom: 1px solid #EEE;
 	font-weight: normal;
@@ -72,7 +70,7 @@
 	background: #333;
 	color: #FFF;
 }
-.titan-framework-panel-wrap.wrap .nav-tab-wrapper + h2 {
+.titan-framework-panel-wrap .nav-tab-wrapper + h2 {
 	background: #333;
 	color: #FFF;
 	border: 0;
